--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
@@ -14,3 +14,11 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.placeholder {
+    border-radius: 3px;
+    text-align: center;
+    padding: 3rem 2rem;
+    color: #6c7892;
+    display: block;
+}
