--- a/in-linked/src/styles.scss
+++ b/in-linked/src/styles.scss
@@ -35,3 +35,10 @@ html, body {
 body {
     background-color: $whisper;
 }
+
+hr {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
