feat(candidate-profile.component.scss): Removed border for last child items

--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
@@ -23,6 +23,13 @@
     display: block;
 }
 
+.education:last-child,
+.experience:last-child  {
+    hr {
+        border-color: transparent;
+    }
+}
+
 .container:last-child {
     padding-bottom: 3 * $padding-base;
 }
