feat(error): Added error component for handling wrong paths, updated css

--- a/in-linked/src/app/layouts/dashboard/container/dashboard/dashboard.component.scss
+++ b/in-linked/src/app/layouts/dashboard/container/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 @import '../../../../../global/app';
 
 .dashboard-container {
-    margin-top: $nav-space;
+    min-height: 100vh;
+    padding-top: $nav-space;
 }
