--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <ng-template [ngIf]="experienceList.length > 0" [ngIfElse]="noExperience">
+    <ng-template [ngIf]="(experienceList)?.length > 0" [ngIfElse]="noExperience">
       <div class="experience" *ngFor="let experience of experienceList">
         <h5 class="font-weight-bold">{{ experience.positionName }}</h5>
         <h6>{{ experience.enterpriseName }}</h6>
@@ -71,7 +71,7 @@
           <app-candidate-education-section-modal></app-candidate-education-section-modal>
       </div>
     </div>
-    <ng-template [ngIf]="experienceList.length > 0" [ngIfElse]="noEducation">
+    <ng-template [ngIf]="(experienceList)?.length > 0" [ngIfElse]="noEducation">
       <div class="education" *ngFor="let education of educationList">
         <h5 class="font-weight-bold">{{ education.schoolName }}</h5>
         <h6 *ngIf="education.degree !== null">{{ education.degree | titlecase }}</h6>
