--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -68,7 +68,7 @@
     <div class="section-header">
       <div class="h2 section-title">Education</div>
       <div *ngIf="isCurrentUser" class="section-edit">
-          <app-candidate-education-section-modal></app-candidate-education-section-modal>
+          <app-candidate-education-section-modal [educationList]="educationList" (educationUpdateUser)="onTitleModalUpdate($event)"></app-candidate-education-section-modal>
       </div>
     </div>
     <ng-template [ngIf]="(experienceList)?.length > 0" [ngIfElse]="noEducation">
