--- a/in-linked/src/app/pages/candidate-profile/education-section-modal/education-section-modal.component.html
+++ b/in-linked/src/app/pages/candidate-profile/education-section-modal/education-section-modal.component.html
@@ -17,12 +17,13 @@
                   </button>
                 </div>
                 <input formControlName="school" type="text" class="form-control" id="school-{{i}}" placeholder="School Name">
+                <input formControlName="edudata" type="password" class="form-control d-none" id="expdata-{{i}}">
               </div>
           <div class="form-row">
             <div class="form-group col">
 
               <label for="degree-{{i}}">Degree</label>
-              <input formControlName="degree" type="text" class="form-control" id="degree-{{i}}" placeholder="Position Title">
+              <input formControlName="degree" type="text" class="form-control" id="degree-{{i}}" placeholder="Degree">
             </div>
 
             <div class="form-group col">
@@ -85,6 +86,7 @@
 
           </div>
         </div>
+        <hr />
       </div>
       <div class="text-center">
         <button type="button" class="btn btn-primary" (click)="addEducation()">Add Education</button>
@@ -93,7 +95,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-link" (click)="d('Save click')">Cancel</button>
-    <button type="button" class="btn btn-success" (click)="d('Save click')">Submit Changes</button>
+    <button type="button" class="btn btn-success" (click)="update()">Submit Changes</button>
   </div>
 </ng-template>
 
