feat(skills): Updated skills

--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -53,7 +53,7 @@
     <div class="section-header">
       <div class="h2 section-title">Skills</div>
       <div *ngIf="isCurrentUser" class="section-edit">
-        <app-candidate-skills-section-modal></app-candidate-skills-section-modal>
+        <app-candidate-skills-section-modal [skillsList]="skills" (skillsUpdateUser)="onTitleModalUpdate($event)"></app-candidate-skills-section-modal>
       </div>
     </div>
 
