--- a/in-linked/src/app/pages/candidate-profile/skills-section-modal/skills-section-modal.component.html
+++ b/in-linked/src/app/pages/candidate-profile/skills-section-modal/skills-section-modal.component.html
@@ -26,7 +26,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-link" (click)="d('Save click')">Cancel</button>
-    <button type="button" class="btn btn-success" (click)="d('Save click')">Submit Changes</button>
+    <button type="button" class="btn btn-success" (click)="update()">Submit Changes</button>
   </div>
 </ng-template>
 
