--- a/in-linked/src/app/pages/search-page/search-jobs/search-jobs.component.html
+++ b/in-linked/src/app/pages/search-page/search-jobs/search-jobs.component.html
@@ -1,38 +1,94 @@
+<div class="card filter-card" id="form-filter">
+    <h4> Form Filters </h4>
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-3 col-sm-6 col-xs-12">
+                <label for="employment-type">Employment Type</label>
+                <div id="employment-type">
+                    <div class="form-check" *ngFor="let ept of employmentTypes">
+                        <input class="form-check-input" type="checkbox" name="employment-type" id="{{ept}}" value="{{ept}}">
+                        <label class="form-check-label" for="{{ept}}">
+                            {{ept}}
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group col-md-3 col-sm-6 col-xs-12">
+                <label for="experience-level">Experience Level</label>
+                <div id="experience-level">
+                    <div class="form-check" *ngFor="let exp of experienceLevels">
+                        <input class="form-check-input" type="checkbox" name="experience-level" id="{{exp}}" value="{{exp}}">
+                        <label class="form-check-label" for="{{exp}}">
+                            {{exp}}
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group col-md-3 col-sm-6 col-xs-12">
+                <label for="education-level">Education Level</label>
+                <div id="education-level">
+                    <div class="form-check" *ngFor="let edu of educationLevels">
+                        <input class="form-check-input" type="radio" name="education-level" id="{{edu}}" value="{{edu}}">
+                        <label class="form-check-label" for="{{edu}}">
+                            {{edu}}
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group col-md-3 col-sm-6 col-xs-12">
+                <label for="date-posted">Date Posted</label>
+                <div id="date-posted">
+                    <div class="form-check" *ngFor="let dp of datePosted">
+                        <input class="form-check-input" type="radio" name="date-posted" id="{{dp}}" value="{{dp}}">
+                        <label class="form-check-label" for="{{dp}}">
+                            {{dp}}
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="text-right">
+            <button type="button" class="btn btn-link">Cancel</button>
+            <button type="button" class="btn btn-primary">Apply</button>
+        </div>
+    </form>
+</div>
+
 <ul class="list-group list-group-flush">
-  <li class="list-group-item">
-    <div class="row">
-      <div class="col-1">
-        <img class="inline-image" src="../../../assets/dog-butt.png">
-      </div>
-      <div class="col">
-        OwO Engineer
-        <br>
-        Petco
-      </div>
-    </div>
-  </li>
-  <li class="list-group-item">
-    <div class="row">
-      <div class="col-1">
-        <img class="inline-image" src="../../../assets/dog-butt.png">
-      </div>
-      <div class="col">
-        UWU Analyst
-        <br>
-        Petco
-      </div>
-    </div>
-  </li>
-  <li class="list-group-item">
-    <div class="row">
-      <div class="col-1">
-        <img class="inline-image" src="../../../assets/dog-butt.png">
-      </div>
-      <div class="col">
-        OmO Engineeer
-        <br>
-        Petco
-      </div>
-    </div>
-  </li>
+    <li class="list-group-item">
+        <div class="row">
+            <div class="col-1">
+                <img class="inline-image" src="../../../assets/dog-butt.png">
+            </div>
+            <div class="col">
+                OwO Engineer
+                <br>
+                Petco
+            </div>
+        </div>
+    </li>
+    <li class="list-group-item">
+        <div class="row">
+            <div class="col-1">
+                <img class="inline-image" src="../../../assets/dog-butt.png">
+            </div>
+            <div class="col">
+                UWU Analyst
+                <br>
+                Petco
+            </div>
+        </div>
+    </li>
+    <li class="list-group-item">
+        <div class="row">
+            <div class="col-1">
+                <img class="inline-image" src="../../../assets/dog-butt.png">
+            </div>
+            <div class="col">
+                OmO Engineeer
+                <br>
+                Petco
+            </div>
+        </div>
+    </li>
 </ul>
