--- a/in-linked/src/app/layouts/navbar/navbar.component.html
+++ b/in-linked/src/app/layouts/navbar/navbar.component.html
@@ -5,9 +5,9 @@
   </button>
 
   <div class="collapse navbar-collapse justify-content-around" [ngClass]="status ? 'show-nav' : 'hide-nav'" id="navbarSupportedContent">
-    <form class="navbar-form text-center search-form" role="search">
-        <div class="form-group" >
-            <input type="search" class="form-control search-bar" placeholder="Search for an enterprise or candidate">
+    <form class="navbar-form text-center search-form" role="search" #search="ngForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+            <input type="search" class="form-control search-bar" placeholder="Search for an enterprise or candidate" name="search-query" [(ngModel)]="searchQuery">
             <input class="btn btn-success search-submit" type="submit" value="Search">
         </div>
       </form>
