--- a/in-linked/src/app/pages/search-page/search-candidates/search-candidates.component.html
+++ b/in-linked/src/app/pages/search-page/search-candidates/search-candidates.component.html
@@ -30,3 +30,24 @@
     </div>
   </li>
 </ul>
+<div *ngIf="searchService.searchCandidateResult.length; else noCandidateResults">
+  <ul class="list-group list-group-flush">
+    <li *ngFor="let result of searchService.searchCandidateResult" class="list-group-item list-group-item-action" (click)="navigateToCandidateProfile(result.username)">
+      <div class="row">
+        <div class="col-1">
+          <img class="inline-image" src="data:image/png;base64,{{result.profilePicture}}" onerror="this.src='http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg'">
+        </div>
+        <div class="col">
+          <a>
+            {{ result.fullName }}
+          </a>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+<ng-template #noCandidateResults>
+  <div class="alert alert-light" role="alert">
+    No Candidates Found
+  </div>
+</ng-template>
