--- a/in-linked/src/app/pages/search-page/search-jobs/search-jobs.component.html
+++ b/in-linked/src/app/pages/search-page/search-jobs/search-jobs.component.html
@@ -92,3 +92,42 @@
         </div>
     </li>
 </ul>
+<div *ngIf="searchService.filteredJobs.length; else checkJobResults">
+    <ul class="list-group list-group-flush">
+        <li *ngFor="let result of searchService.filteredJobs" class="list-group-item list-group-item-action" (click)="navigateToJobPage(result.jobId)">
+            <div class="row">
+                <div class="col-1">
+                    <img class="inline-image" src="../../../assets/dog-butt.png">
+                </div>
+                <div class="col">
+                    {{ job.jobTitle }}
+                    <br>
+                    {{ job.enterpriseId }}
+                </div>
+            </div>
+        </li>
+    </ul>
+</div>
+<ng-template #checkJobResults>
+    <div *ngIf="searchService.searchJobsResult.length; else noJobResults">
+        <ul class="list-group list-group-flush">
+            <li *ngFor="let result of searchService.searchJobsResult" class="list-group-item list-group-item-action" (click)="navigateToJobPage(result.jobId)">
+                <div class="row">
+                    <div class="col-1">
+                        <img class="inline-image" src="../../../assets/dog-butt.png">
+                    </div>
+                    <div class="col">
+                        {{ job.jobTitle }}
+                        <br>
+                        {{ job.enterpriseId }}
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</ng-template>
+<ng-template #noJobResults>
+    <div class="alert alert-light" role="alert">
+        No Jobs Found
+    </div>
+</ng-template>
