--- a/in-linked/src/app/pages/job/job.component.html
+++ b/in-linked/src/app/pages/job/job.component.html
@@ -10,9 +10,11 @@
                 <h5> {{ (enterprise)?.enterpriseName || 'Unavailable Enterprise...' | titlecase }} </h5>
                 <h5> {{ (job)?.city + ',' || '' | titlecase}} {{ (job)?.province + ',' || '' | titlecase}} {{ (job)?.country || '' | titlecase}}</h5>
             </div>
-            <div class="col-md-3 col-sm-12 text-right" *ngIf="(job)?.jobUrl">
-                <a href="{{(job)?.jobUrl}}" class="btn btn-primary" role="button" target="_blank"> Apply Externally </a>
+            <div class="col-md-3 col-sm-12 text-right">
+                <a *ngIf="(job)?.jobUrl" href="{{(job)?.jobUrl}}" class="btn btn-primary" role="button" target="_blank"> Apply Externally </a>
+                <app-job-modal></app-job-modal>
             </div>
+            
         </div>
         <hr>
         <div class="row" *ngIf="(job)?.employmentType || (job)?.experienceLevel || (job)?.educationLevel || (job)?.postedDate || (job)?.salary">
