feat(job.component.ts): Checking for current enterprise in jobs page

--- a/in-linked/src/app/pages/job/job.component.html
+++ b/in-linked/src/app/pages/job/job.component.html
@@ -12,7 +12,9 @@
             </div>
             <div class="col-md-3 col-sm-12 text-right">
                 <a *ngIf="(job)?.jobUrl" href="{{(job)?.jobUrl}}" class="btn btn-primary" role="button" target="_blank"> Apply Externally </a>
-                <app-job-modal></app-job-modal>
+                <div *ngIf="isCurrentEnterprise" class="section-edit">
+                    <app-job-modal></app-job-modal>
+                </div>
             </div>
             
         </div>
