--- a/in-linked/src/app/pages/job/job-modal/job-modal.component.html
+++ b/in-linked/src/app/pages/job/job-modal/job-modal.component.html
@@ -1,77 +1,70 @@
 <ng-template #content let-d="dismiss">
-        <div class="modal-header">
-          <h4 class="modal-title" id="candidate-title-section">Update your Profile</h4>
-          <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+    <div class="modal-header">
+        <h4 class="modal-title" id="candidate-title-section">Update Job</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
             <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
+        </button>
+    </div>
+    <div class="modal-body">
+        <form>
             <div class="form-row">
-              <div class="form-group col">
-                <label for="candidate-first-name">First Name</label>
-                <input name="first-name" type="text" class="form-control" id="candidate-first-name" placeholder="First Name" [(ngModel)]="firstName">
-              </div>
-              <div class="form-group col">
-                <label for="candidate-last-name">Last Name</label>
-                <input name="last-name" type="text" class="form-control" id="candidate-last-name" placeholder="Last Name" [(ngModel)]="lastName">
-              </div>
+                <div class="form-group col">
+                    <label for="job-title">Job Title</label>
+                    <input name="job-title" type="text" class="form-control" id="job-title" placeholder="Job Title"
+                        [(ngModel)]="jobTitle">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col">
+                    <label for="employment-type">Type</label>
+                    <select id="employment-type" name="employment-type" class="form-control" [(ngModel)]="employmentType">
+                        <option *ngFor="let emp of employmentTypes" [value]="emp" [selected]="employmentType==emp">{{emp}}</option>
+                    </select>
+                </div>
+                <div class="form-group col">
+                    <label for="experience-level">Experience</label>
+                    <select id="experience-level" name="experience-level" class="form-control" [(ngModel)]="experienceLevel">
+                        <option *ngFor="let exp of experienceLevels" [value]="exp" [selected]="experienceLevel==exp">{{exp}}</option>
+                    </select>
+                </div>
+                <div class="form-group col">
+                    <label for="education-level">Education</label>
+                    <select id="education-level" name="education-level" class="form-control" [(ngModel)]="educationLevel">
+                        <option *ngFor="let edu of educationLevels" [value]="edu" [selected]="educationLevel==edu">{{edu}}</option>
+                    </select>
+                </div>
+                <div class="form-group col">
+                    <label for="salary">Salary</label>
+                    <input name="salary" type="text" class="form-control" id="salary" placeholder="Salary per Hour"
+                        [(ngModel)]="salary">
+                </div>
+            </div>
+            <label for="location">Location Information</label>
+            <div id="location">
+                <div class="form-row">
+                    <div class="form-group col">
+                        <input name="city" type="text" class="form-control" id="city" placeholder="City" [(ngModel)]="city">
+                    </div>
+                    <div class="form-group col">
+                        <input name="province" type="text" class="form-control" id="province" placeholder="Province"
+                            [(ngModel)]="province">
+                    </div>
+                    <div class="form-group col">
+                        <input name="country" type="text" class="form-control" id="country" placeholder="Country"
+                            [(ngModel)]="country">
+                    </div>
+                </div>
             </div>
             <div class="form-group">
-              <label for="candidate-headline">Headline</label>
-              <textarea name="headline" class="form-control" id="candidate-headline" rows="3" [(ngModel)]="headline"></textarea>
+                <label for="job-description">Job Description</label>
+                <textarea name="job-description" class="form-control" id="enterprise-headline" rows="3" [(ngModel)]="jobDescription"></textarea>
             </div>
-            <div class="form-row">
-              <div class="form-group col-9">
-                <label for="candidate-email">Email Address</label>
-                <input name="email" type="text" class="form-control" id="candidate-email" placeholder="john.smith@email.com" [(ngModel)]="email">
-              </div>
-              <div class="form-group col-3 text-center">
-                <label for="candidate-display-email-radios">Display email?</label>
-                <div id="candidate-display-email-radios">
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="display-email" id="yes-email" value="yes-email"
-                      [(ngModel)]="displayEmail" [value]="'yes-email'" [checked]="displayEmail === 'yes-email'">
-                    <label class="form-check-label" for="yes-email">
-                      Yes
-                    </label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="display-email" id="no-email" value="no-email"
-                      [(ngModel)]="displayEmail" [value]="'no-email'" [checked]="displayEmail === 'no-email'">
-                    <label class="form-check-label" for="no-email">
-                      No
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <label for="password-change">Change Your Password</label>
-            <div *ngIf="errorMessage" class="title-warning-message">{{errorMessage}}</div>
-            <div id="password-change">
-      
-              <div class="form-row">
-      
-                <div class="form-group col">
-                  <!-- <label for="candidate-old-pw">Current Password</label> -->
-                  <input name="current-password" type="password" class="form-control" id="candidate-old-pw" placeholder="Current Password" [(ngModel)]="currPassword">
-                </div>
-                <div class="form-group col">
-                  <!-- <label for="candidate-new-pw">New Password</label> -->
-                  <input name="new-password" type="password" class="form-control" id="candidate-new-pw" placeholder="New Password" [(ngModel)]="newPassword">
-                </div>
-                <div class="form-group col">
-                  <!-- <label for="candidate-confirm-pw">Confirm New Password</label> -->
-                  <input name="confirm-password" type="password" class="form-control" id="candidate-confirm-pw" placeholder="Confirm New Password" [(ngModel)]="newConfirm">
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-link" (click)="d('Save click')">Cancel</button>
-          <button type="button" class="btn btn-success" (click)="onSubmit();">Submit Changes</button>
-        </div>
-      </ng-template>
-      
-      <fa-icon class="edit" [icon]="['far', 'edit']" size="lg" (click)="open(content)"></fa-icon>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-link" (click)="d('Save click')">Cancel</button>
+        <button type="button" class="btn btn-success" (click)="onSubmit();">Submit Changes</button>
+    </div>
+</ng-template>
+
+<fa-icon class="edit" [icon]="['far', 'edit']" size="lg" (click)="open(content)"></fa-icon>
